<resources>
    <string name="app_name">SimpleNote</string>
    <string name="title_activity_setting">SimpleNote</string>

    <string name="app_color">更换应用主题</string>
    <string name="backup">备份笔记到本地</string>
    <string name="feedback">意见反馈</string>
    <string name="ratingapp">给应用评分</string>
    <string name="about">关于</string>


    <string name="preference_darktheme">preference_darktheme</string>
    <string name="preference_change_color">preference_change_color</string>
    <string name="preference_feedback">preference_feedback</string>
    <string name="preference_rating_app">preference_rating_app</string>
    <string name="preference_share_app">preference_share_app</string>
    <string name="preference_about">preference_about</string>


    <string name="change_app_theme">change_app_theme</string>
    <string name="change_theme">更改主题</string>
    <string name="rating_notice">请先安装应用市场</string>
    <string name="net_notice">请先打开网络</string>
    <string name="email_notice">对不起,您没有安装邮件类app</string>

    <string name="delete_notice">确定删除吗?</string>

    <string name="none">这个功能还没做呢！</string>
    <string name="specialthanks">lguipeng 的 Notes 开源地址 https://github.com/lguipeng/Notes\n\ndrakeet 的 Meizhi 开源地址 https://github.com/drakeet/Meizhi</string>
    <string name="app_name_with_introduce">SimpleNote</string>
    <string name="introduce">SimpleNote,一个轻量简单的笔记应用,让你可以随时随地,记录身边点滴.\n\nDown is better than perfect,因此代码还在继续完善中. 开源地址  https://github.com/hedge-hog/Note \n\n感谢flamingo和simon提供的帮助以及kate提供的应用logo</string>
    <string name="thanks"> com.android.support:appcompat-v7:23.2.0\ncom.android.support:cardview-v7:23.2.0\nde.greenrobot:greendao:2.1.0\ncom.jakewharton:butterknife:7.0.1\ncom.android.support:design:23.2.0\nme.imid.swipebacklayout.lib:library:1.0.0\nde.greenrobot:eventbus:2.4.0\ncom.lapism:searchview:2.1.1</string>


    <string name="share">分享给朋友O(∩_∩)O~</string>
    <string name="action_share">分享</string>
    <string name="share_text">发现了一个很精致的便签应用,你试试看,这是下载地址：http://fir.im/simplenote </string>

</resources>
